fixed solution section alignment/sizing issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,10 +152,16 @@
   margin-bottom: 24px;
 }
 .solution {
-  margin: 120px;
+  /* margin: 120px; */
   display: flex;
   justify-content: center;
-  align-items: center;
+  max-width: 1360px;
+
+  margin: 0 auto;
+  text-align: center;
+  max-width: 1360px;
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 .solution .solution-container {
   display: flex;
@@ -208,6 +214,6 @@
   font-size: 16px;
   color: #627382;
 }
-.challenge-text-last p {
-  margin-bottom: 80px;
+.challenge {
+  padding-bottom: 80px;
 }
